[package]
name = "fh-core"
version = "0.1.0"
authors = ["Tim Eggert <tim@elbart.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.0", features=["full"]}
warp = "0.3"
anyhow = "1"
serde = "1"
sqlx = { version = "0.5", features = [ "sqlite", "runtime-tokio-rustls" ] }
reqwest = "0.11"
