[package]
name = "fh-http"
version = "0.1.0"
authors = ["Tim Eggert <tim@elbart.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fh-v8 = {version="0.1", path="../fh-v8"}
fh-db = {version="0.1", path="../fh-db"}
fh-core = {version="0.1", path="../fh-core"}
tokio = {version="1.0", features=["full"]}
warp = "0.3"
anyhow = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "1"
dotenv = "0.15"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1"
tracing-log = "0.1"