[package]
name = "fh-http"
version = "0.1.0"
authors = ["Tim Eggert <tim@elbart.com>"]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "fh-http"

# [dependencies]
# fh-v8 = {version="0.1", path="../fh-v8"}
# fh-db = {version="0.1", path="../fh-db"}
# fh-core = {version="0.1", path="../fh-core"}
# tokio = {version="0.2", features=["full"]}
# warp = "0.2"
# anyhow = "1"
# uuid = { version = "0.8", features = ["serde", "v4"] }
# serde = "1"
# dotenv = "0.15"
# pretty_env_logger = "0.4"
# actix-web = "3.3"

[dependencies]
actix-http = "=3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
actix-web = "=4.0.0-beta.5"
fh-v8 = {version="0.1", path="../fh-v8"}
fh-db = {version="0.1", path="../fh-db"}
fh-core = {version="0.1", path="../fh-core"}

anyhow = "1"
serde = "1.0.115"
config = { version = "0.11.0", default-features = false, features = ["yaml"] }
sqlx = { version = "0.5.1", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1.19"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1.6"
tracing-log = "0.1.1"
serde-aux = "1.0.1"
unicode-segmentation = "1.7.1"
validator = "0.13.0"
rand = { version = "0.8", features=["std_rng"] }
sha2 = { version = "0.9" }
tokio = { version = "1", features = ["full"] }
tracing-actix-web = "0.4.0-beta.4"

[dev-dependencies]
once_cell = "1.7.2"
claim = "0.5.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
fake = "~2.3.0"
wiremock = "0.5"
serde_json = "1.0.61"
actix-rt = "2"
tokio = { version = "1", features = ["macros"] }
linkify = "0.6.0"