[package]
name = "fh-v8"
version = "0.1.0"
authors = ["Tim Eggert <tim@elbart.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fh-core = {version="0.1", path="../fh-core"}
fh-db = {version="0.1", path="../fh-db"}
deno_core = "0.86"
tokio = { version = "1", features = ["full"]}
serde_json = "1"
serde = "1"
anyhow = "1.0"
thiserror = "1.0"

# reqwest 0.11 does not run with tokio 0.2. hint: it pull tokio 1.0.1 under the hood
# you get panics like these: 
# ```
# thread 'main' panicked at 'not currently running on the Tokio runtime.',
# ```
reqwest = "0.11"
uuid = "0.8"
